Switch logs to lager

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,10 @@
+{erl_opts, [
+    debug_info,
+    {parse_transform, lager_transform}
+]}.
+
 {deps, [
     {small_ints, {git, "https://github.com/whatyouhide/small_ints.git", {branch, "master"}}},
-    {hex, {git, "https://github.com/b/hex.git", {branch, "master"}}}
+    {hex, {git, "https://github.com/b/hex.git", {branch, "master"}}},
+    {lager, {git, "https://github.com/erlang-lager/lager.git", {tag, "3.5.1"}}}
 ]}.
