--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 ]}.
 
 {deps, [
-    {small_ints, {git, "https://github.com/whatyouhide/small_ints.git", {branch, "master"}}},
-    {hex, {git, "https://github.com/b/hex.git", {branch, "master"}}},
-    {lager, {git, "https://github.com/erlang-lager/lager.git", {tag, "3.5.1"}}}
+    {small_ints, "0.1.0"},
+    {hex2bin, "1.0.0"},
+    {lager, "3.5.1"}
 ]}.
